Sun Jul  6 18:09:13 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/preproc.c: fix bug #115778 for attribute value template
	  on xsl:sort order

Sun Jul  6 17:22:35 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/documents.c libxslt/transform.c: applied patch from
	  Keith Isdale to desactivate node numbering when running under
	  the debugger.

Sun Jul  6 00:00:31 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/security.c: fix the write checking code when
	  the output filename does not parse as an URL bug #115402

Sun Jun 22 19:38:04 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/Makefile.am: Albert Chin pointed out that trio.h and
	  triodef.h were missing from the distribution

Fri Jun 13 16:53:33 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt.spec.in libexslt/Makefile.am libexslt/libexslt.3
	  libxslt/Makefile.am libxslt/libxslt.3: Moved the man pages
	  to section 3
	* libexslt/sets.c: applied patch from Peter Breitenlohner
	* doc/*: rebuilt the docs
	* tests/docbook/result//* tests/xmlspec/*.html: changes in
	  generattion of &quot; as " in element content.

Sun Jun 08 22:57:13 CEST 2003 Igor Zlatkovic <igor@zlatkovic.com>

	* libxslt/transform.c: changed xsltChoose to ignore whitespace 
	  which is a sibling of xsl:when

Sat May 31 17:18:21 CEST 2003 Igor Zlatkovic <igor@zlatkovic.com>

	* libxslt/xslt.c: fixed a possible crash when the document
	  wasn't a proper stylesheet.

Tue May 20 12:14:12 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/variables.c: fixes a 64bits cleanliness issue #113318

Sat May 17 13:25:32 CEST 2003 Igor Zlatkovic <igor@zlatkovic.com>

	* win32/defgen.xsl: new file, generates the export sources.
	* win32/*.def.src: these are now autogenerated, changes to these
	  will not be logged anymore.

Fri May 16 13:22:31 EDT 2003 Daniel Veillard <daniel@veillard.com>

	* tests/docs/Makefile.am tests/docs/bug-121.*