@@ -1,0 +1,11 @@
+<?xml version="1.0"?> 
+<!DOCTYPE doc > 
+ 
+<doc 
+        version="1.0" 
+        xmlns:a="urn:a" 
+        xmlns:b="urn:b" 
+        xmlns:c="urn:c" 
+> 
+ <empty/> 
+</doc> 
