@@ -126,6 +126,7 @@ EXTRA_DIST = \
     bug-119.out bug-119.xsl \
     bug-120.out bug-120.xsl \
     bug-121.out bug-121.xsl \
+    bug-122.out bug-122.xsl \
     character.out character.xsl \
     character2.out character2.xsl \
     itemschoose.out itemschoose.xsl \
