@@ -1,0 +1,2 @@
+<?xml version="1.0"?>
+<Document xmlns:c="urn:c" xmlns:b="urn:b" xmlns:a="urn:a"/>
