@@ -1,3 +1,11 @@
+Sun Jul  6 18:31:56 CEST 2003 Daniel Veillard <daniel@veillard.com>
+
+	* libxslt/transform.c: fixing bug #115913 for xsl:copy with namespace
+	  nodes.
+	* tests/docs/Makefile.am tests/docs/bug-122.*
+	  tests/general/Makefile.am tests/general/bug-122*: added the
+	  test to the regression suite.
+	
 Sun Jul  6 18:09:13 CEST 2003 Daniel Veillard <daniel@veillard.com>
 
 	* libxslt/preproc.c: fix bug #115778 for attribute value template
